--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -18,8 +18,12 @@ jobs:
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.17'
+          go-version: '1.19'
           cache: false
+      - name: Set up LibGL, Mesa & X11 libraries
+        run: |
+          sudo apt-get --allow-releaseinfo-change update
+          sudo apt-get install -y libgtk-3-dev libasound2-dev libxxf86vm-dev
       - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.4.0
