--- a/.golangci.yml
+++ b/.golangci.yml
@@ -68,7 +68,7 @@ linters:
       line-length: 140
     misspell:
       locale: US
-    wsl_5:
+    wsl_v5:
       allow-first-in-block: true
       allow-whole-block: false
       branch-max-lines: 2
